# pep517-conan

./: .gitignore  Dockerfile  LICENSE  README.md
example/: CMakeLists.txt  README.md  conan_delocate.py  conanfile.py  pyproject.toml
example/src/ext/: add_module.cpp
example/src/py_conan_add/: __init__.py  add_module.py
example/test/: test_add_module.py
